--- a/fitness-and-health-website/stylesheet-training-plan-subpages.css
+++ b/fitness-and-health-website/stylesheet-training-plan-subpages.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 body {
-    background-color: black;
+    background-color: black !important;
     margin: 0;
     font-family: merriweather, sans-serif;
-    color: white;
 }
 .hero h1 {
     font-family: 'Merriweather', sans-serif;
@@ -18,6 +17,7 @@ body {
 a.textInNavBar {
     color: white;
     font-size: large;
+    font-family: 'Merriweather', sans-serif;
 }
 
 a.textInNavBar:hover {
@@ -37,6 +37,7 @@ footer {
     background-color: black;
     color: white;
     padding: 20px 0;
+    font-family: 'Merriweather', sans-serif;
 }
 
 footer h5.text-in-fotter {
@@ -76,4 +77,21 @@ footer a:hover {
     .navbar-nav {
         text-align: center;
     }
+}
+
+/* Tabellenstile für den Trainingsplan */
+.table th, .table td {
+    padding: 15px;
+    text-align: left;
+    border: 1px solid #ddd;
+    font-family: 'Merriweather', sans-serif;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #2f2f2f;
+}
+
+.table thead {
+    background-color: #A2D2FF;
+    color: white;
 }
