--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -36,6 +36,7 @@ a.textInNavBar {
     color: white;
     font-size: large;
     transition: color 0.3s ease;
+    font-family: sans-serif;
 }
 
 a.textInNavBar:hover {
