--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -70,7 +70,7 @@ html, body{
     text-transform: uppercase;
     font-size: 300%;
     font-weight: bold;
-    font-family: merriweather, sans-serif;
+    font-family: sans-serif;
 }
 
 @keyframes flyIn {
@@ -403,7 +403,7 @@ a.textInNavBar
 {
     color: white;
     font-size: large;
-    font-family: merriweather, sans-serif;
+    font-family: sans-serif;
 }
 
 @keyframes transition-color-in-nav {
