--- a/fitness-and-health-website/stylesheet-training-plan-subpages.css
+++ b/fitness-and-health-website/stylesheet-training-plan-subpages.css
@@ -3,10 +3,10 @@
 body {
     background-color: black !important;
     margin: 0;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 .hero h1 {
-    font-family: 'Merriweather', sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
     color: #A2D2FF;
 }
@@ -17,7 +17,7 @@ body {
 a.textInNavBar {
     color: white;
     font-size: large;
-    font-family: 'Merriweather', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 a.textInNavBar:hover {
@@ -37,7 +37,7 @@ footer {
     background-color: black;
     color: white;
     padding: 20px 0;
-    font-family: 'Merriweather', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 footer h5.text-in-fotter {
@@ -84,7 +84,7 @@ footer a:hover {
     padding: 15px;
     text-align: left;
     border: 1px solid #ddd;
-    font-family: 'Merriweather', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
