--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -5,7 +5,7 @@ html, body{
     padding: 0;
     background-color: black;
     overflow-x: hidden;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 .index{
     background-size: cover;
@@ -36,7 +36,7 @@ html, body{
 .headersTop{
     color: yellow;
     font-weight: bold;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
     font-style: normal;
     text-decoration: underline;
     font-size: 50px;
@@ -58,7 +58,7 @@ html, body{
     overflow: hidden;
     height: 20vh;
     width: 100%;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .headLine {
@@ -70,7 +70,7 @@ html, body{
     text-transform: uppercase;
     font-size: 300%;
     font-weight: bold;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 @keyframes flyIn {
@@ -107,7 +107,7 @@ h2 {
     white-space: nowrap;
     text-transform: uppercase;
     transform: translateX(0);
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .quote3{
@@ -119,7 +119,7 @@ h2 {
     transform: translateX(0);
     white-space: nowrap;
     text-transform: uppercase;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .quote4{
@@ -131,7 +131,7 @@ h2 {
     overflow: hidden;
     white-space: nowrap;
     text-transform: uppercase;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .quote5{
@@ -143,7 +143,7 @@ h2 {
     color: whitesmoke;
     transform: translateX(0);
     text-transform: uppercase;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .quotes {
@@ -257,7 +257,7 @@ h2 {
     position: absolute;
     margin-top: 0;
     font-size: 200%;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 @keyframes occor {
@@ -279,13 +279,13 @@ p#\@InTableInMain
 {
     color: white;
     font-weight: bold;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: larger;
 }
 p.normalTextInTableInMain
 {
     color: yellow;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: large;
     padding: 0px;
     margin: 0px;
@@ -317,7 +317,7 @@ td.tdInMain
 
 .headerOfText{
     color: bisque;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
     letter-spacing: 2px;
     text-align: center;
     margin-bottom: 2%;
@@ -361,7 +361,7 @@ td.tdInMain
 }
 .h2onSite{
     margin-bottom: 1%;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 2rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px black;
@@ -373,7 +373,7 @@ td.tdInMain
 .textContent{
     margin-top: 8%;
     font-size: 110%;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 .h2Box{
     display: inline-block;
@@ -392,7 +392,7 @@ td.tdInMain
     font-size: 150%;
     margin: 0;
     line-height: 1.5;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 @keyframes fadeIn {
     0% { opacity: 0; transform: translateY(50%); }
@@ -403,7 +403,7 @@ a.textInNavBar
 {
     color: white;
     font-size: large;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 @keyframes transition-color-in-nav {
@@ -428,7 +428,7 @@ a.textInNavBar:hover
 a.hover-effects
 {
     font-size: medium;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 a.hover-effects:hover
@@ -459,7 +459,7 @@ h5.text-in-fotter
     background: linear-gradient(90deg, #A2D2FF, #BDE0FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-family: merriweather, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 @media (max-width: 768px) {
