--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -75,7 +75,7 @@ html, body {
     margin-top: 7%;
 }
 .hero {
-    background: #dcebf7;
+    background: #F9F4E6;
     padding: 4rem 2rem;
     text-align: center;
     margin-top: 2rem;
