changed the color of the cards in the main page

--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -41,6 +41,7 @@ a.textInNavBar:hover {
     font-size: 1.25rem;
     margin-bottom: 20px;
     color: #6AA84F;
+    font-weight: lighter;
 }
 
 /* Card Styles */
