--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -87,6 +87,10 @@ html, body {
 }
 .icon-card {
     transition: transform 0.3s;
+    background-color: #F6E8D5;
+    border-radius: 10px;
+    border: 0.125rem solid #F6E8D5;
+    box-shadow: 0 4px 8px rgba(0, 0, 1, 0.2);
 }
 .icon-card:hover {
     transform: scale(1.05);
